# installer

./: .gitignore  MANIFEST.in  Makefile  README.md  install-binary  installer  pyproject.toml  requirements-dev.txt  setup.py
docs/: generate-docs.sh  install-binary.1  installer.1
src/install_binary/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py  history.py  installer.py
src/installer/: __init__.py  __main__.py  cli.py  constants.py  exceptions.py
tests/: __init__.py  test_cli.py  test_history.py  test_installer.py  test_installer_additional.py
